--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 			<div>
 			<h2>task2</h2>
 			<img src="img/n1.jpg"height="100"width="290">
-			<a href="#">click here</a>
+			<a href=" https://arjun-nujra.github.io/task-01/">click here</a>
 			</div>
 			
 			<div>
 			<h2>task3</h2>
 			<img src="img/n2.jpg"height="100"width="290">
-			<a href="#">click here</a>
+			<a href="https://arjun-nujra.github.io/task-02/">click here</a>
 			</div>
 			
 			</div>
